--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\wiki\\\\Desktop\\\\kidney-mlops\\\\kidney-disease-mlops'"
+       "'c:\\\\Users\\\\wiki\\\\Desktop\\\\kidney-mlops\\\\kidney-disease-mlops\\\\research'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\wiki\\\\Desktop\\\\kidney-mlops'"
+       "'c:\\\\Users\\\\wiki\\\\Desktop\\\\kidney-mlops\\\\kidney-disease-mlops'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,54 +78,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'read_yaml' from 'cnnClassifier.utils.common' (c:\\users\\wiki\\desktop\\kidney-mlops\\kidney-disease-mlops\\src\\cnnClassifier\\utils\\common.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcnnClassifier\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcnnClassifier\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_yaml, create_directories\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'read_yaml' from 'cnnClassifier.utils.common' (c:\\users\\wiki\\desktop\\kidney-mlops\\kidney-disease-mlops\\src\\cnnClassifier\\utils\\common.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "from cnnClassifier.constants import *\n",
+    "from cnnClassifier.constants.__init__ import *\n",
     "from cnnClassifier.utils.common import read_yaml, create_directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH):\n",
+    "        #params_filepath = PARAMS_FILE_PATH)\n",
+    "\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        #self.params = read_yaml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "        config = self.config.data_ingestion\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_ingestion_config = DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir \n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import zipfile\n",
+    "import gdown\n",
+    "from cnnClassifier import logger\n",
+    "from cnnClassifier.utils.common import *"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self, config: DataIngestionConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    \n",
+    "    def download_file(self)-> str:\n",
+    "        '''\n",
+    "        Fetch data from the url\n",
+    "        '''\n",
+    "\n",
+    "        try: \n",
+    "            dataset_url = self.config.source_URL\n",
+    "            zip_download_dir = self.config.local_data_file\n",
+    "            os.makedirs(\"artifacts/data_ingestion\", exist_ok=True)\n",
+    "            logger.info(f\"Downloading data from {dataset_url} into file {zip_download_dir}\")\n",
+    "\n",
+    "            file_id = dataset_url.split(\"/\")[-2]\n",
+    "            prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "            gdown.download(prefix+file_id,zip_download_dir)\n",
+    "\n",
+    "            logger.info(f\"Downloaded data from {dataset_url} into file {zip_download_dir}\")\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            raise e\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path) "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-10-12 22:28:56,497: INFO: common: yaml file: config\\config.yaml loaded successfully ]\n",
+      "[2024-10-12 22:28:56,498: INFO: common: created directory at: artifacts ]\n",
+      "[2024-10-12 22:28:56,501: INFO: common: created directory at: artifacts/data_ingestion ]\n",
+      "[2024-10-12 22:28:56,506: INFO: 2085442592: Downloading data from https://drive.google.com/file/d/1XB9bXEKCf7Zg50eMlAnjFt6wUm6jqb9Z/view?usp=drive_link into file artifacts/data_ingestion/data.zip ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1XB9bXEKCf7Zg50eMlAnjFt6wUm6jqb9Z\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1XB9bXEKCf7Zg50eMlAnjFt6wUm6jqb9Z&confirm=t&uuid=46300aa6-9003-4ff1-b480-aa9e3aefa599\n",
+      "To: c:\\Users\\wiki\\Desktop\\kidney-mlops\\kidney-disease-mlops\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 57.7M/57.7M [02:42<00:00, 354kB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-10-12 22:31:44,450: INFO: 2085442592: Downloaded data from https://drive.google.com/file/d/1XB9bXEKCf7Zg50eMlAnjFt6wUm6jqb9Z/view?usp=drive_link into file artifacts/data_ingestion/data.zip ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
   },
   {
    "cell_type": "code",
