--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -203,28 +203,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-14 19:06:08,909: INFO: common: yaml file: config\\config.yaml loaded successfully ]\n",
-      "[2024-10-14 19:06:08,924: INFO: common: yaml file: params.yaml loaded successfully ]\n",
-      "[2024-10-14 19:06:08,926: INFO: common: created directory at: artifacts ]\n",
+      "[2024-10-14 23:06:13,279: INFO: common: yaml file: config\\config.yaml loaded successfully ]\n",
+      "[2024-10-14 23:06:13,284: INFO: common: yaml file: params.yaml loaded successfully ]\n",
+      "[2024-10-14 23:06:13,287: INFO: common: created directory at: artifacts ]\n",
       "Found 139 images belonging to 2 classes.\n",
-      "9/9 [==============================] - 29s 3s/step - loss: 12.7607 - accuracy: 0.4820\n",
-      "[2024-10-14 19:06:39,010: INFO: common: json file saved at: scores.json ]\n"
+      "9/9 [==============================] - 21s 2s/step - loss: 2.0819 - accuracy: 0.5324\n",
+      "[2024-10-14 23:06:35,045: INFO: common: json file saved at: scores.json ]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/10/14 19:06:40 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2024/10/14 23:06:36 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-14 19:06:42,446: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading. ]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\wiki\\AppData\\Local\\Temp\\tmp_3fa26my\\model\\data\\model\\assets\n",
-      "[2024-10-14 19:06:43,233: INFO: builder_impl: Assets written to: C:\\Users\\wiki\\AppData\\Local\\Temp\\tmp_3fa26my\\model\\data\\model\\assets ]\n"
+      "[2024-10-14 23:06:37,574: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading. ]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\wiki\\AppData\\Local\\Temp\\tmpv7pb67_w\\model\\data\\model\\assets\n",
+      "[2024-10-14 23:06:38,241: INFO: builder_impl: Assets written to: C:\\Users\\wiki\\AppData\\Local\\Temp\\tmpv7pb67_w\\model\\data\\model\\assets ]\n"
      ]
     },
     {
@@ -234,8 +234,8 @@
       "C:\\Users\\wiki\\AppData\\Roaming\\Python\\Python311\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
       "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2024/10/14 19:09:19 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 2\n",
-      "Created version '2' of model 'VGG16Model'.\n"
+      "2024/10/14 23:09:03 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 5\n",
+      "Created version '5' of model 'VGG16Model'.\n"
      ]
     }
    ],
